Classfinder/Classfinder/Content/Styles/Site/Home/schedule.less
@import "shared.less";

@dark-green:#287062;
@light-dark-green:#20937e;

#left-bar {
    background-color:@light-dark-green;
    width:25%;
    position:fixed;
    height:100%;
    overflow-y:auto;
    overflow-x:hidden;
    left:0;
    top:0;
    margin:0;
}
    #img-row {
        width:100%;
        height:75px;
        background-color:@green;
        text-align:center;
    }
        #img-row a {
            border:0;
        }
        #desktop-logo {
            height:35px;
            margin-top:20px;
            border:0;
        }
        #mobile-logo {
            display:none;
            border:0;
        }
    #periods-header {
        border-bottom:1px solid #fff;
        height:40px;
        width:100%;
        line-height:40px;
        padding-left:35px;
        font-size:20px;
    }
    #mobile-period-list {
        display:none;
    }

.period-box {
    height: 75px;
    line-height: 75px;
    padding-left: 35px;
    font-size: 20px;
    cursor: pointer;
}
    .period-box:hover {
        background-color: @dark-green;
    }
    .selected {
        background-color: @dark-green;
        border-right: 20px solid @green;
    }

#classmates td {
    border-bottom:1px solid #a6a6a6;
    padding-top: 10px;
    padding-bottom: 10px;
    font-size: 20px;
}
#classmates td:first-child {
    padding-left: 25px;
}
#classmates a {
    color: @green;
    text-decoration: none;
}
#classmates td:last-child {
    text-align:right;
    padding-right: 25px;
    color: @light;
}

#header-row {
    color:@dark;
    font-size: 25px;
}
    #header-row td {
        border-bottom: 1px solid @green;
        padding-top: 10px;
        padding-bottom: 5px;
    }
        #header-row td:first-child {
            padding-left: 25px;
        }
        #header-row td:last-child {
            text-align: right;
            padding-right: 25px;
        }

#right-box {
    position:relative;
    margin-left:25%;
    color:@green;
    width:75%;
}
    #top-left {
        position:absolute;
        left:5%;
        top:25px;
    }
        #period-name {
            font-size:25px;
            font-weight:400;
            margin:0;
            margin-bottom:5px;
            margin-left:5%;
            width:100%;
        }
        #student-count {
            color:#acacac;
            font-size:20px;
            margin-top:0;
            margin-bottom:0;
            margin-left:5%;
        }
        #semester-chooser {
            margin-top:0;
            margin-left:5%;
            width:500px;
        }
            #semester-chooser a {
                color:@dark;
            }
                #semester-chooser a:hover {
                    color:@green;
                }
            #semester-chooser a.curr-semester {
                color:@green;
                cursor:text;
            }

    #top-right {
        position:absolute;
        right:5%;
        top:25px;
        text-align:right;
    }
        #options {
            color:@green;
        }
            #options a {
                text-decoration:none;
                color:@green;
                font-size:20px;
            }
        #viewing-label {
            top:35px;
            color:@light;
            font-size:20px;
            margin:0;
            margin-top:10px;
        }
        #viewing-name {
            font-size:25px;
            top:60px;
            right:5%;
            color:@dark;
            margin:0;
        }

    #table-container {
        background-color:@off-white;
        border-radius:15px;
        min-height:300px;
        position:absolute;
        top:125px;
        width:90%;
        margin-left:5%;
    }

@media all and (max-width:1010px) {
    body, html {
        overflow-x:hidden; //todo: find & fix the real reason
    }
    #right-box {
        position:static;
    }
    #top-left {
        left:27%;
    }
    #top-right {
        right:2%;
    }
    #table-container {
        width:100%;
        margin-left:0;
    }
    #period-name, #student-count {
        margin-left:0;
    }
    .period-box {
        padding-left:10px;
    }
    #desktop-logo {
        width:100%;
        height:auto;
        margin-top:0;
        .half-vert;
    }
}

@media all and (max-width:890px) {
    .period-box {
        font-size:20px;
    }
}

@media all and (max-width:750px) {
    #left-bar {
        width:100%;
        height:75px !important;
        overflow-y:hidden;
        min-height:0;
        position:absolute;
        left:0;
        top:0;
        padding:0;
    }
        #img-row {
            width:10%;
            height:75px;
            background-color:@green;
        }
            #mobile-logo {
                width:100%;
                //height:75px;
                height:auto;
                .half-vert;
                display:block;
            }

        #desktop-logo,
        #periods-header,
        #bottom-options,
        .period-box {
            display:none;
        }

    #mobile-period-list {
        display:block;
        position:absolute;
        top:0;
        width:90%;
        left:10%;
    }
        #mobile-period-list .period-box-mobile {
            cursor:pointer;
            float:left;

            font-size:25px;
            font-weight:300;
            font-family:Lato;

            height:75px;
            line-height:75px;
            text-align:center;
            width:100%;

            display:block;
        }
        #mobile-period-list .selected-mobile {
            background-color:@green;
        }
        #mobile-period-list div {
            width:14.28571428571428%;
            float:left;
        }

    #right-box {
        width:100% !important;
        margin-top:75px;
        margin-left:0;
    }
    #top-left {
        position:static;
        width:100%;
        left:0;
        background-color:#fff;
    }
    #top-right {
        position:static;
        width:100%;
        left:0;
        right:0;
        text-align:center;
        background-color:#fff;
        padding-bottom:25px;
    }
    #options {
        display:none;
    }
    #period-name, #student-count {
        width:100%;
        text-align:center;
        margin:0;
    }
    #viewing-label {
        margin-top:0;
    }
    #period-name {
        padding-top:25px;
    }
    body, html {
        background-color:@off-white;
    }
    #table-container {
        border-radius:0;
        position:static;
    }
}

@media all and (max-width:350px) {
    #period-name {
        font-size:25px;
    }
}

